[0.0.2]Add notify setting layout and function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,11 @@
                         </div>
                         <div class="col-xs-9 text-right">
                             <div class="huge"><%= units.length%></div>
-                            <div>加入裝置</div>
+                            <div>已加入裝置</div>
                         </div>
                     </div>
                 </div>
-                <a href="#">
+                <a href="/editDevice">
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -32,11 +32,11 @@
                         </div>
                         <div class="col-xs-9 text-right">
                             <div class="huge">2</div>
-                            <div>加入帳號</div>
+                            <div>已加入帳號</div>
                         </div>
                     </div>
                 </div>
-                <a href="#">
+                <a href="/account">
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -54,11 +54,11 @@
                         </div>
                         <div class="col-xs-9 text-right">
                             <div class="huge">1</div>
-                            <div>裝置設定</div>
+                            <div>通知設定</div>
                         </div>
                     </div>
                 </div>
-                <a href="#">
+                <a href="/editNotify">
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
