--- a/views/page/js_link.ejs
+++ b/views/page/js_link.ejs
@@ -109,12 +109,12 @@
 			<li>
 		<% } %>
 			<a href="/find"><span class="glyphicon glyphicon-list-alt"></span> 資料查詢</a></li>
-		<% if(title ==='裝置設定'){ %>
+		<% if(title ==='裝置編輯'){ %>
 			<li class="active">
 		<% }else{ %>
 			<li>
 		<% } %>
-			<a href="/setting"><span class="glyphicon glyphicon-pencil"></span> 裝置設定</a></li>
+			<a href="/editDevice"><span class="glyphicon glyphicon-pencil"></span> 裝置設定</a></li>
 		<div class="attribution">版權所有 <a href="http://www.gemtek.com.tw/national/2.htm" target="_blank" title="正文科技">正文科技</a> </div>
 	</div><!--/.sidebar-->
 
