[0.0.5]Fix final list unable update in index
1.After parse no save to file cause update fail
2.Add auto refresh with 5 minutes in index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,7 +116,7 @@
                     <div class="list-group">
                         <table  class="table table-bordered table-hover table-striped">
                             <thead>
-                                <tr class="active">
+                                <tr class="info">
                                     <th>裝置名稱</th>
                                     <th>裝置類型</th>
                                     <th>更新日期</th>
