--- a/views/page/header.ejs
+++ b/views/page/header.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta http-equiv="refresh" content="300; url=/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title><%= title%></title>
 <link href="css/bootstrap.css" rel="stylesheet">
