--- a/views/editDevice.ejs
+++ b/views/editDevice.ejs
@@ -87,7 +87,7 @@
 					</div>
 				</div>
 
-			</div><!--/.col-->
+			</div><!--.col-->
 			<% if (units) { %>
 				<div class="col-md-12">
 					<table class="table table-striped table-hover">
@@ -171,115 +171,4 @@
       </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
 
-
-<script class="code" type="text/javascript">
-	$(document).ready(function () {
-		/*setTimeout(function(){
-		    //do what you need here
-		    if(document.getElementById('error_message')){
-		    	document.getElementById('error_message').innerText = '';
-		    }
-		}, 3000);*/
-		$("#edit").hide();
-		$("#del").hide();
-	});
-	 var unitsValue = document.getElementById('units').value;
-	 var unitList= JSON.parse(unitsValue);
-	 console.log('units = '+ unitsValue);
-
-	/*$(document).on("click","tr.rows td", function(e){
-	    alert(e.target.innerHTML);
-	});*/
-	$(function(){
-        $('.rows').click(function(){
-
-            var index = $(this).index();
-            var unit = unitList[index];
-            console.log('Click row index = '+  index);
-            console.log('unit = '+  JSON.stringify(unit));
-            $('#name').val(unit.name);
-            $('#mac').val(unit.macAddr);
-            $('#overtime').val(unit.overtime);
-            var postMac = document.getElementById("postMac");
-            postMac.value = unit.macAddr;
-
-            //alert('row index = '+  unit.type);
-            //$("type_option").val(unitList[index].type).change();
-            $("#type_option").children().each(function(){
-            	//alert('$(this).val() = '+  $(this).val());
-			    if ($(this).val()==unit.type){
-			        //jQuery給法
-			        $(this).attr("selected", "true"); //或是給"selected"也可
-			        var typeString = document.getElementById("typeString");
-            		typeString.value = $(this).text();
-			        //javascript給法
-			        this.selected = true;
-	    		}
-			});
-
-
-            //$("#"+this.value).removeAttr('disabled');
-            //$("#"+this.value).attr('disabled','disabled');
-            $('#mac').attr('disabled','disabled');
-            $("#edit").show();
-			$("#del").show();
-			$("#new").hide();
-	    });
-    });
-
-	$("form").submit(function () {
-	  	if(document.getElementById("mac").value.length != 8){
-			alert('MAC字數須為8');
-			return false;
-		}else{
-			$("#type_option").children().each(function(){
-            	//alert('$(this).val() = '+  $(this).val() + ' -> '+$("#type_option").val());
-			    if ($(this).val()==$("#type_option").val()){
-			        //jQuery給法
-			        $(this).attr("selected", "true"); //或是給"selected"也可
-			        //alert(' $(this).text() : '+ $(this).text());
-			        var typeString = document.getElementById("typeString");
-            		typeString.value = $(this).text();
-			        //javascript給法
-			        this.selected = true;
-	    		}
-			});
-			//alert($( "#type_option" ).val());
-			if($( "#type_option" ).val() == 'd001'){
-				socket.emit('setting_client_new',{mac:document.getElementById("mac").value});
-			}
-		}
-	});
-
-	function check(){
-		if(document.getElementById("name").value == ""){
-			alert("未輸入裝置名稱");
-		}else if(document.getElementById("mac").value == ""){
-			alert("未輸入裝置MAC");
-		}else{
-		    document.getElementById("editDevice").submit();
-		}
-	}
-
-	function editCheck(button){
-
-		$("#mode").val("edit");
-		document.getElementById("editDevice").submit();
-	}
-
-	function delCheck(button){
-		$("#mode").val("del");
-		$('#myModal').modal('show');
-	}
-
-	function toSubmit(){
-		$('#myModal').modal('hide');
-
-		//alert($( "#type_option" ).val());
-		if($( "#type_option" ).val() == 'd001'){
-			socket.emit('setting_client_del',{mac:document.getElementById("mac").value});
-		}
-		document.getElementById("editDevice").submit();
-	}
-</script>
 <%- include page/footer %>
