[0.0.12]Modify update function

--- a/views/page/footer.ejs
+++ b/views/page/footer.ejs
@@ -59,6 +59,9 @@
 	<script type="text/javascript" src="/js/webduino/firebase.js"></script>
 	<script type="text/javascript" src="/js/webduino/runtime.min.js"></script>
 	<script type="text/javascript" src="/myjs/control.js"></script>
+<% } else if(title === '最新訊息'){ %>
+	<!--  FIND JS -->
+    <script type="text/javascript"src="/myjs/myUpdate.js"></script>
 <% } %>
 </body>
 
