--- a/views/update.ejs
+++ b/views/update.ejs
@@ -17,10 +17,10 @@
 				<% units.forEach(function(unit) { %>
 					<tr id="<%= unit.macAddr %>">
 						<td><div name ="name"><%= unit.name %></div></td>
-						<td><div name ="tmp1"></div></td>
-						<td><div name ="hum1"></div></td>
-						<td><div name ="voltage"></td>
-						<td><div name ="time"></div></td>
+						<td><div name ="tmp1"><%= unit.information.temperature %></td>
+						<td><div name ="hum1"><%= unit.information.humidity %></td>
+						<td><div name ="voltage"><%= unit.information.voltage %></td>
+						<td><div name ="time"><%= unit.date %></td>
 					</tr>
 				<% }); %>
 			<% } %>
@@ -43,70 +43,6 @@
 			</button>
 		</div>--> <!-- col-md-3 -->
 	</div>	<!--row-->
-
-<script>
-
-	var socket = io.connect();
-
-	function test(){
-		//alert('test');
-		socket.emit('new_message_test','new_message_test');
-	}
-
-
-
-    $(document).ready(function(){
-    	socket.on('connect',function(){
-
-		$("#created").text( 'Client has connected to server!' );
-			socket.emit('new_message_client','hello,new message socket cient is ready');
-		});
-		socket.on('disconnect',function(){
-			$("#created").text( 'Client has disconnected!');
-		});
-		socket.on('new_message_receive_mqtt',function(data){
-			//alert(data.time);
-			var index = data.index;
-			var status = '正常';
-			if(data.vol<300){
-				status = '低電壓';
-			}
-			//alert(index);
-			//alert(($('[name=name]').eq(index).text()));
-			$('[name=tmp1]').eq(index).text(data.tmp1);
-			//$('[name=tmp2]').eq(index).text(data.tmp2);
-			$('[name=hum1]').eq(index).text(data.hum1);
-			//$('[name=hum2]').eq(index).text(data.hum2);
-			$('[name=voltage]').eq(index).text(status);
-			$('[name=time]').eq(index).text(data.time);
-		});
-
-		socket.on('new_message_db_findLast',function(data){
-			//alert('data'+JSON.stringify(data));
-			console.log('data : '+JSON.stringify(data));
-			var index = data.index;
-			var status = '正常';
-			if(data.vol<300){
-				status = '低電壓';
-			}
-			//alert(index);
-			//alert(($('[name=name]').eq(index).text()));
-			$('[name=tmp1]').eq(index).text(data.tmp1);
-			//$('[name=tmp2]').eq(index).text(data.tmp2);
-			$('[name=hum1]').eq(index).text(data.hum1);
-			//$('[name=hum2]').eq(index).text(data.hum2);
-			$('[name=voltage]').eq(index).text(status);
-			$('[name=time]').eq(index).text(data.time);
-		});
-
-		setTimeout(function(){
-    		//do what you need here
-		    document.getElementById('error_message').innerText = '';
-		}, 3000);
-
-    });
-
-</script>
 
 
 <%- include page/footer %>
